--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "emdev/php-api-orm",
     "description": "This package is intended for creating PHP APIs with ORM for MYSQL and SQL",
     "type": "library",
+    "keywords": ["php api","php orm"],
+    "homepage": "https://github.com/elvysmarcos/php-api-orm",
     "license": "MIT",
     "authors": [
         {
@@ -10,7 +12,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": ">=7.4.0"
+    },
     "autoload": {
         "psr-4": {
             "EMDev\\API-ORM\\":"src/"
