--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "email": "dev@emdev.com.br"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=7.4.0"
     },
