--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,29 @@
 {
-    "name": "emdev/api-orm",
-    "description": "This package is intended for creating PHP APIs with ORM for MYSQL and SQL",
-    "type": "library",
-    "keywords": ["php api","php orm"],
-    "homepage": "https://github.com/elvysmarcos/php-api-orm",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Elys Marcos",
-            "email": "dev@emdev.com.br"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {
-        "php": ">=7.4.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "APIORM\\":"src/"
-        }
+  "name": "emdev/api-orm",
+  "description": "This package is intended for creating PHP APIs with ORM for MYSQL and SQL",
+  "type": "library",
+  "keywords": [
+    "php api",
+    "php orm"
+  ],
+  "homepage": "https://github.com/elvysmarcos/php-api-orm",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Elys Marcos",
+      "email": "dev@emdev.com.br"
     }
+  ],
+  "minimum-stability": "dev",
+  "require": {
+    "php": ">=7.4.0",
+    "ext-apache": "*",
+    "ext-json": "*",
+    "ext-mbstring": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "APIORM\\": "src/"
+    }
+  }
 }
