--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=7.4.0"
+    "php": ">=7.4.0",
+    "emdev/saw-toolkit": "^v0.1.4"
   },
   "autoload": {
     "psr-4": {
